--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.hmdapp.finaltailor">
+    package="com.hmdapp.finaltailor" >
+
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
 
     <application
         android:allowBackup="true"
@@ -9,7 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.TotalReportPaymentCustomerActivity"></activity>
+        <activity android:name=".Activity.Customer.Show_Model_Activity"></activity>
+        <activity android:name=".Activity.Customer.Regester_Customer" />
+        <activity android:name=".Activity.TotalReportPaymentCustomerActivity" />
         <activity android:name=".Activity.EveryRemainderActivity" />
         <activity android:name=".Activity.RemainderActivity" />
         <activity android:name=".Activity.DisplayReportActivity" />
@@ -27,9 +35,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Activity.Activity_No_Permesion_use">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Activity.Person_Activity" />
         <activity android:name=".Activity.ContactActivity" />
-        <activity android:name=".Activity.Profile_Activity" />
+        <activity android:name=".Activity.Customer.Profile_Activity" />
         <activity android:name=".Activity.Regester_Activity" />
         <activity android:name=".Activity.Tasks_Activity" />
     </application>
