--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:18.0.0'
 
     implementation 'com.android.support:multidex:1.0.3'
+    implementation 'com.balysv:material-ripple:1.0.2'                  // ripple effect
 
     implementation 'com.rom4ek:arcnavigationview:1.0.3'
 
