--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -21,6 +22,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.firebase:firebase-firestore:17.1.0'
     configurations {
         all*.exclude group: 'com.android.support', module: 'support-v13'
     }
@@ -43,7 +45,7 @@ dependencies {
 
 
     implementation 'com.google.firebase:firebase-core:16.0.1'
-    implementation 'com.google.firebase:firebase-firestore:18.0.0'
+
 
     implementation 'com.android.support:multidex:1.0.3'
     implementation 'com.balysv:material-ripple:1.0.2'                  // ripple effect
@@ -51,3 +53,6 @@ dependencies {
     implementation 'com.rom4ek:arcnavigationview:1.0.3'
 
 }
+
+// Add the following line to the bottom of the file:
+
